--- a/app/templates/default/css/style.css
+++ b/app/templates/default/css/style.css
@@ -48,6 +48,17 @@ table tr:hover {
 	background: #f0f0f0;
 }
 
+li {
+    list-style-image: url("../images/arrow.png");
+}
+
+.personal_details {
+    float: left; 
+    width: 100%;
+    height: 200px;
+    font-family: Bookman Old Style;
+}
+
 /* Framework elements */
 .wrapper {
 	margin: auto;
@@ -76,3 +87,5 @@ table tr:hover {
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 }
+
+
